[gd_scene load_steps=54 format=2]

[ext_resource path="res://sprites/fighter_kirby/12.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://tilesets/GreenGreensTileset.tres" type="TileSet" id=3]
[ext_resource path="res://world.gd" type="Script" id=4]
[ext_resource path="res://sprites/fighter_kirby/7.png" type="Texture" id=5]
[ext_resource path="res://sprites/fighter_kirby/9.png" type="Texture" id=6]
[ext_resource path="res://sprites/fighter_kirby/10.png" type="Texture" id=7]
[ext_resource path="res://sprites/fighter_kirby/idle/idle0.png" type="Texture" id=8]
[ext_resource path="res://sprites/fighter_kirby/jump.png" type="Texture" id=9]
[ext_resource path="res://sprites/fighter_kirby/8.png" type="Texture" id=10]
[ext_resource path="res://sprites/fighter_kirby/11.png" type="Texture" id=11]
[ext_resource path="res://sprites/fighter_kirby/1.png" type="Texture" id=12]
[ext_resource path="res://sprites/fighter_kirby/2.png" type="Texture" id=13]
[ext_resource path="res://sprites/fighter_kirby/3.png" type="Texture" id=14]
[ext_resource path="res://sprites/fighter_kirby/5.png" type="Texture" id=15]
[ext_resource path="res://sprites/fighter_kirby/4.png" type="Texture" id=16]
[ext_resource path="res://sprites/fighter_kirby/6.png" type="Texture" id=17]
[ext_resource path="res://sprites/fighter_kirby/falling.png" type="Texture" id=18]
[ext_resource path="res://background.png" type="Texture" id=19]
[ext_resource path="res://sprites/fighter_kirby/idle/idle1.png" type="Texture" id=20]
[ext_resource path="res://sprites/fighter_kirby/idle/idle4.png" type="Texture" id=21]
[ext_resource path="res://sprites/fighter_kirby/idle/idle3.png" type="Texture" id=22]
[ext_resource path="res://sprites/fighter_kirby/idle/idle2.png" type="Texture" id=23]
[ext_resource path="res://sprites/fighter_kirby/idle/idle8.png" type="Texture" id=24]
[ext_resource path="res://sprites/fighter_kirby/idle/idle14.png" type="Texture" id=25]
[ext_resource path="res://sprites/fighter_kirby/idle/idle13.png" type="Texture" id=26]
[ext_resource path="res://sprites/fighter_kirby/idle/idle7.png" type="Texture" id=27]
[ext_resource path="res://sprites/fighter_kirby/idle/idle10.png" type="Texture" id=28]
[ext_resource path="res://sprites/fighter_kirby/idle/idle15.png" type="Texture" id=29]
[ext_resource path="res://sprites/fighter_kirby/idle/idle9.png" type="Texture" id=30]
[ext_resource path="res://sprites/fighter_kirby/idle/idle6.png" type="Texture" id=31]
[ext_resource path="res://sprites/fighter_kirby/idle/idle12.png" type="Texture" id=32]
[ext_resource path="res://sprites/fighter_kirby/idle/idle16.png" type="Texture" id=33]
[ext_resource path="res://sprites/fighter_kirby/idle/idle11.png" type="Texture" id=34]
[ext_resource path="res://sprites/fighter_kirby/idle/idle5.png" type="Texture" id=35]
[ext_resource path="res://sprites/fighter_kirby/run/run1.png" type="Texture" id=36]
[ext_resource path="res://sprites/fighter_kirby/run/run3.png" type="Texture" id=37]
[ext_resource path="res://sprites/fighter_kirby/run/run2.png" type="Texture" id=38]
[ext_resource path="res://sprites/fighter_kirby/run/run4.png" type="Texture" id=39]
[ext_resource path="res://sprites/fighter_kirby/run/run0.png" type="Texture" id=40]
[ext_resource path="res://sprites/fighter_kirby/attack/attack_light_ground0.png" type="Texture" id=41]
[ext_resource path="res://particles/attack_light/alp0.png" type="Texture" id=42]
[ext_resource path="res://particles/attack_light/alp1.png" type="Texture" id=43]
[ext_resource path="res://sprites/fighter_kirby/damage/damage0.png" type="Texture" id=44]
[ext_resource path="res://sprites/fighter_kirby/damage/damage1.png" type="Texture" id=45]
[ext_resource path="res://sprites/fighter_kirby/damage/damage2.png" type="Texture" id=46]
[ext_resource path="res://fonts/Kirby___.ttf" type="DynamicFontData" id=47]
[ext_resource path="res://Attack.gd" type="Script" id=49]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 35 ), ExtResource( 31 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 33 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "attack_light",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 44 ) ],
"loop": true,
"name": "damage",
"speed": 0.0
}, {
"frames": [  ],
"loop": true,
"name": "attack_light_particles",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 1 ) ],
"loop": true,
"name": "walk",
"speed": 16.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 8.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 36 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 39 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "attack_light_particles",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 200, 200 )

[sub_resource type="DynamicFont" id=5]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 47 )

[node name="World" type="Node"]
script = ExtResource( 4 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( -176, 304 )
z_index = 10
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.41 )
shape = SubResource( 1 )

[node name="fighterKirby" type="AnimatedSprite" parent="player"]
scale = Vector2( 0.08, 0.08 )
frames = SubResource( 2 )
animation = "damage"
frame = 2
playing = true

[node name="playerArea" type="Area2D" parent="player/fighterKirby"]
scale = Vector2( 12.5, 12.5 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="player/fighterKirby/playerArea"]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.41 )
shape = SubResource( 1 )

[node name="attack_light_hit" type="Area2D" parent="player/fighterKirby"]
position = Vector2( 400, 35 )
scale = Vector2( 1, 0.5 )
script = ExtResource( 49 )

[node name="attack_light_particles" type="AnimatedSprite" parent="player/fighterKirby/attack_light_hit"]
visible = false
position = Vector2( -62.5, 5.00049 )
scale = Vector2( 1, 2 )
frames = SubResource( 3 )
animation = "attack_light_particles"

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/fighterKirby/attack_light_hit"]
shape = SubResource( 4 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_h_enabled = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="player"]

[node name="background" type="Sprite" parent="player/ParallaxBackground"]
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 19 )
centered = false

[node name="InvulnerabilityTimer" type="Timer" parent="player"]
wait_time = 0.8
one_shot = true

[node name="damage_percentage" type="RichTextLabel" parent="player"]
anchor_right = 0.716
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = -14.0
custom_fonts/normal_font = SubResource( 5 )
text = "0%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_container" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589830, 0, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 2, 0, 655366, 3, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 5, 0, 1048590, 0, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 2, 0, 1114126, 3, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 5, 0, 1376244, 0, 0, 1376245, 1, 0, 1376246, 1, 0, 1376247, 1, 0, 1376248, 1, 0, 1376249, 1, 0, 1376250, 1, 0, 1376251, 1, 0, 1376252, 1, 0, 1376253, 1, 0, 1376254, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 2, 0, 1441780, 3, 0, 1441781, 4, 0, 1441782, 4, 0, 1441783, 4, 0, 1441784, 4, 0, 1441785, 4, 0, 1441786, 4, 0, 1441787, 4, 0, 1441788, 4, 0, 1441789, 4, 0, 1441790, 4, 0, 1441791, 4, 0, 1376256, 4, 0, 1376257, 4, 0, 1376258, 4, 0, 1376259, 4, 0, 1376260, 4, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, 4, 0, 1376266, 4, 0, 1376267, 4, 0, 1376268, 4, 0, 1376269, 4, 0, 1376270, 4, 0, 1376271, 5, 0 )
[connection signal="area_entered" from="player/fighterKirby/playerArea" to="player" method="_on_playerArea_area_entered"]
